# Agentic-Projects

./: README.md  requirements.txt
Blog_project/: app.py  langgraph.json  pyproject.toml  request.json  requirements.txt
Blog_project/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Blog_project/src/graph/: graph_builder.py
Blog_project/src/llm/: groq_llm.py
Blog_project/src/nodes/: blog_nodes.py
Blog_project/src/states/: blogstate.py
PROJECT_1/News/: monthly_summary.md  weekly_summary.md
PROJECT_1/src/langgraphagenticai/: main.py
PROJECT_1/src/langgraphagenticai/LLMS/: groqllm.py
PROJECT_1/src/langgraphagenticai/Nodes/: ai_news_node.py  basic_chatbot_node.py  chatbot_with_tools.py
PROJECT_1/src/langgraphagenticai/State/: state.py
PROJECT_1/src/langgraphagenticai/Tools/: search_tool.py
PROJECT_1/src/langgraphagenticai/graph/: graph_builder.py
PROJECT_1/src/langgraphagenticai/ui/: uiconfig_file.ini  uiconfigfile.py
Transcation_manager_with_AI/: main.py  pyproject.toml
Transcation_manager_with_AI/finance_agent/: .gitignore  README.md  requirements.txt
Transcation_manager_with_AI/finance_agent/src/db/: sheet_repository.py
Transcation_manager_with_AI/finance_agent/src/graph/: workflow.py
Transcation_manager_with_AI/finance_agent/src/nodes/: query_nodes.py  transaction_nodes.py
Transcation_manager_with_AI/finance_agent/src/states/: transaction.py
mcpprojectdemo/: client.py  main.py  mathserver.py  pyproject.toml  weather.py
(+2 files in other folders)
